--- a/HttpsServicesServer/package.json
+++ b/HttpsServicesServer/package.json
@@ -3,15 +3,13 @@
   "version": "1.0.0",
   "dependencies":
   {
-    "body-parser": "^1.8.3",
-    "express": "^4.9.4",
-    "jwt-simple": "^0.2.0",
-    "morgan": "^1.3.1",
-    "openssl-wrapper":"^0.2.1",
+    "body-parser": ">=1.8.3",
+    "express": ">=4.9.4",
+    "jwt-simple": ">=0.2.0",
+    "morgan": ">=1.3.1",
+    "openssl-wrapper":">=0.2.1",
     "q" :"1.2.1",
-    "adm-zip":"^0.1.1",
-    "express-cors":"^0.0.1",
-    "util":"^0.4.9",
-    "fs":"^0.0.2"
+    "adm-zip":">=0.4.7",
+    "express-cors":">=0.0.1"
   }
 }
